# msix-offline-installer

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/components/: FileDrop.tsx  InstallerPanel.tsx  LogPanel.tsx
src/services/: tauriService.ts
